swagger users ok
