# priv/static/swagger.json
@@ -1,7 +1,166 @@
 {
   "swagger": "2.0",
-  "paths": {},
-  "definitions": {},
+  "paths": {
+    "/users/{id}": {
+      "put": {
+        "tags": [
+          "User"
+        ],
+        "summary": "",
+        "responses": {
+          "200": {
+            "schema": {
+              "$ref": "#/definitions/User"
+            },
+            "description": "Success"
+          }
+        },
+        "parameters": [
+          {
+            "type": "string",
+            "required": true,
+            "name": "id",
+            "in": "path",
+            "description": "User's ID"
+          }
+        ],
+        "operationId": "TimeManagerWeb.UserController.update",
+        "description": "Update user"
+      },
+      "get": {
+        "tags": [
+          "User"
+        ],
+        "summary": "",
+        "responses": {
+          "200": {
+            "schema": {
+              "$ref": "#/definitions/User"
+            },
+            "description": "Success"
+          }
+        },
+        "parameters": [],
+        "operationId": "TimeManagerWeb.UserController.show",
+        "description": "Show a single user"
+      }
+    },
+    "/users": {
+      "post": {
+        "tags": [
+          "User"
+        ],
+        "summary": "",
+        "responses": {
+          "200": {
+            "schema": {
+              "$ref": "#/definitions/User"
+            },
+            "description": "Success"
+          }
+        },
+        "parameters": [
+          {
+            "type": "string",
+            "required": true,
+            "name": "username",
+            "in": "query",
+            "description": "User's name"
+          },
+          {
+            "type": "string",
+            "required": true,
+            "name": "email",
+            "in": "query",
+            "description": "User's email"
+          }
+        ],
+        "operationId": "TimeManagerWeb.UserController.create",
+        "description": "Create a new user"
+      },
+      "get": {
+        "tags": [
+          "User"
+        ],
+        "summary": "",
+        "responses": {
+          "200": {
+            "schema": {
+              "$ref": "#/definitions/Users"
+            },
+            "description": "Success"
+          }
+        },
+        "parameters": [
+          {
+            "type": "string",
+            "required": false,
+            "name": "username",
+            "in": "query",
+            "description": "Username"
+          },
+          {
+            "type": "string",
+            "required": false,
+            "name": "email",
+            "in": "query",
+            "description": "User's email"
+          }
+        ],
+        "operationId": "TimeManagerWeb.UserController.index",
+        "description": "List all users"
+      }
+    },
+    "/api/users/{id}": {
+      "delete": {
+        "tags": [
+          "User"
+        ],
+        "summary": "",
+        "responses": {
+          "200": {
+            "description": "Success"
+          }
+        },
+        "parameters": [],
+        "operationId": "TimeManagerWeb.UserController.delete",
+        "description": "Delete user"
+      }
+    }
+  },
+  "definitions": {
+    "User": {
+      "type": "object",
+      "title": "User",
+      "required": [
+        "email",
+        "username"
+      ],
+      "properties": {
+        "username": {
+          "type": "string",
+          "description": "Users name"
+        },
+        "email": {
+          "type": "string",
+          "description": "Users email"
+        }
+      },
+      "example": {
+        "username": "Joe",
+        "email": "joe@mail.com"
+      },
+      "description": "A user of the application"
+    },
+    "Users": {
+      "type": "array",
+      "title": "Users",
+      "items": {
+        "$ref": "#/definitions/User"
+      },
+      "description": "A collection of Users"
+    }
+  },
   "host": "localhost:4000",
   "info": {
     "title": "Time Manager",
